crates/rlf-macros/tests/fail/term_call_syntax.rs
use rlf::rlf;

rlf! {
    card = { one: "card", other: "cards" };
    bad($n) = "{card($n)}";
}

fn main() {}
