crates/rlf-macros/tests/fail/term_call_syntax.stderr
error: 'card' is a term — use {card:$n}
 --> tests/fail/term_call_syntax.rs:5:15
  |
5 |     bad($n) = "{card($n)}";
  |               ^^^^^^^^^^^^
